<resources>
    <string name="app_name">MyTaxi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_trips">Мои поездки</string>
    <string name="wallet">Способы оплаты</string>
    <string name="favorite_places">Избранные адреса</string>
    <string name="mock_hint">Loading…</string>
    <string name="where">Куда?</string>
    <string name="mock_data">6 Июля, Вторник</string>
    <string name="mock_start_point">улица Sharof Rashidov, Ташкент</string>
    <string name="mock_end_point">5a улица Асадуллы Ходжаева</string>
    <string name="mock_time">21:53</string>
    <string name="mock_price">12 900 cум</string>
    <string name="mock_car">Чёрный Chevrolet Malibu</string>
    <string name="help">Помощь</string>
    <string name="retry">Повторить</string>
    <string name="make_a_call">Позвонить</string>
    <string name="driver">Водитель</string>
    <string name="mock_taxi_driver_name">Sadriddin Abdurakhimov</string>
    <string name="rating">Рейтинг:</string>
    <string name="trips">Поездки:</string>
    <string name="common_data">Общие данные</string>
    <string name="rate">Тариф</string>
    <string name="mock_rate">Бизнес</string>
    <string name="payment_method">Способ оплаты</string>
    <string name="order">Заказ №</string>
    <string name="mock_order">3917866</string>
    <string name="duration">Продолжительность поездки</string>
    <string name="mock_duration">15:20</string>
    <string name="cost_calculation">Расчёт стоимости</string>
    <string name="min_cost">Минимальная сумма</string>
    <string name="mock_min_cost">5 000 UZS</string>
    <string name="increased_demand">Повышенный спрос</string>
    <string name="mock_increased_demand">+3 000 UZS</string>
    <string name="travel_amount">Сумма поездки</string>
    <string name="mock_cost">31 645 UZS</string>
    <string name="price_pending">Цена ожидании</string>
    <string name="mock_pending_price">0 UZS</string>
    <string name="total">Итого</string>
    <string name="mock_total_price">39 600 UZS</string>
    <string name="remove_trip">Удалить данные</string>
    <string name="id_key">key_id</string>
    <string name="date_time_order">Дата и время поездки</string>
<string name="acces_key" >f69e3c084c93c56331d9ac63f0df2e41</string>
</resources>