<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/mini_trip_background">

    <ImageView
        android:id="@+id/img_start_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:src="@drawable/ic_start_point"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_start_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/mock_start_point"
        android:textColor="@color/black_text_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_start_point"
        app:layout_constraintTop_toTopOf="@+id/img_start_point" />

    <ImageView
        android:id="@+id/img_end_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_end_point"
        app:layout_constraintEnd_toEndOf="@+id/img_start_point"
        app:layout_constraintStart_toStartOf="@+id/img_start_point"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_point" />

    <TextView
        android:id="@+id/tv_end_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mock_end_point"
        android:textColor="@color/black_text_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_start_point"
        app:layout_constraintStart_toStartOf="@+id/tv_start_point"
        app:layout_constraintTop_toTopOf="@+id/img_end_point" />

    <View
        android:id="@+id/view4"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:background="@drawable/rounded_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_end_point" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:text="•"
        android:textColor="@color/black_text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/tv_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_time"
        android:textColor="@color/black_text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/img_end_point"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/mock_price"
        android:textColor="@color/black_text_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageView
        android:id="@+id/img_car_type"
        android:layout_width="108dp"
        android:layout_height="39dp"
        android:src="@drawable/ic_car_delivery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_end_point" />

</androidx.constraintlayout.widget.ConstraintLayout>